# porkbun-cli

./: CLAUDE.md  CONTRIBUTING.md  ENHANCEMENT_PLAN.md  README.md  porkbun.py  pyproject.toml  requirements.txt
src/: server.py
src/porkbun_cli/: __init__.py  __main__.py  api.py  cli.py  interactive.py
src/porkbun_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
