[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "porkbun-cli"
version = "1.0.0"
description = "Command-line interface for managing domains and DNS records through the Porkbun API"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Luke Steuber", email = "luke@lukesteuber.com"}
]
maintainers = [
    {name = "Luke Steuber", email = "luke@lukesteuber.com"}
]
keywords = ["porkbun", "dns", "domain", "cli", "api"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: Name Service (DNS)",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.25.0",
    "tabulate>=0.8.0",
]

[project.optional-dependencies]
interactive = [
    "questionary>=1.10.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
all = [
    "porkbun-cli[interactive,dev]",
]

[project.scripts]
porkbun = "porkbun_cli.cli:main"

[project.urls]
Homepage = "https://github.com/lukeslp/porkbun-cli"
Documentation = "https://github.com/lukeslp/porkbun-cli#readme"
Repository = "https://github.com/lukeslp/porkbun-cli.git"
Issues = "https://github.com/lukeslp/porkbun-cli/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
porkbun_cli = ["py.typed"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=porkbun_cli --cov-report=term-missing"
